--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,43 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="post">
+	<h2>Pirate Info</h2>
+		<p>
+		<label for="pirate[name]">Name: </label>
+		<input type="text" id="pirate[name]" name="pirate[name]">
+		</p>
+		<p>
+		<label for="pirate[weight]">Weight: </label>
+		<input type="text" id="pirate[weight]" name="pirate[weight]">
+		</p>
+		<p>
+		<label for="pirate[height]">Height: </label>
+		<input type="text" id="pirate[height]" name="pirate[height]">
+		</p>
+	<h2>Ship One Info</h2>
+		<p>
+		<label for="ship_name_1">Ship One Name: </label>
+		<input type="text" id="ship_name_1" name="pirate[ships][][name]">
+		</p>
+		<p>
+		<label for="ship_type_1">Ship One Type: </label>
+		<input type="text" id="ship_type_1" name="pirate[ships][][type]">
+		</p>
+		<p>
+		<label for="ship_booty_1">Ship One Booty: </label>
+		<input type="text" id="ship_booty_1" name="pirate[ships][][booty]">
+		</p>
+	<h2>Ship Two Info</h2>
+		<p>
+		<label for="ship_name_2">Ship Two Name: </label>
+		<input type="text" id="ship_name_2" name="pirate[ships][][name]">
+		</p>
+		<p>
+		<label for="ship_type_2">Ship Two Type: </label>
+		<input type="text" id="ship_type_2" name="pirate[ships][][type]">
+		</p>
+		<p>
+		<label for="ship_booty_2">Ship Two Booty: </label>
+		<input type="text" id="ship_booty_2" name="pirate[ships][][booty]">
+		<p>
+	<input type="submit" value="Submit">
+</form>
