--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
 <h1>Display your Pirate here</h1>
-
+<p>Name: <%= @pirate.name %></p>
+<p>Weight: <%= @pirate.weight %></p>
+<p>Height: <%= @pirate.height %></p>
 
 <h2>Display your first ship here</h2>
+<p>Name: <%= @ship_one.name %></p>
+<p>Type: <%= @ship_one.type %></p>
+<p>Booty: <%= @ship_one.booty %></p>
 
 
 <h2>Display your second ship here</h2>
+<p>Name: <%= @ship_two.name %></p>
+<p>Type: <%= @ship_two.type %></p>
+<p>Booty: <%= @ship_two.booty %></p>
